Add --range-key argument to mirror deployment
